// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateReplyEvent/> render should render a \`Responded via Facebook Messenger\` event 1`] = `
<div
  className="component isVirtualized last"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          key="private-reply-event"
          src="test-file-stub"
        />
      </div>
      <span
        className="actionName"
      >
        Responded via Facebook Messenger
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        className=""
        name="Alex Plugaru"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
      <div>
        <span
          className="separator"
        >
          -
        </span>
        <span
          className="ticketLink"
        >
          <a
            href="184"
            rel="noopener noreferrer"
            target="_blank"
          >
            View ticket
          </a>
        </span>
      </div>
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2021-04-27T01:50:16.832898+00:00"
    />
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responded via Facebook Messenger\` event even if the payload is missing source, sender and meta data 1`] = `
<div
  className="component isVirtualized last"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          key="private-reply-event"
          src="test-file-stub"
        />
      </div>
      <span
        className="actionName"
      >
        Responded via Facebook Messenger
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        className=""
        name="Alex Plugaru"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
      <div>
        <span
          className="separator"
        >
          -
        </span>
        <span
          className="ticketLink"
        >
          <a
            href="184"
            rel="noopener noreferrer"
            target="_blank"
          >
            View ticket
          </a>
        </span>
      </div>
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2021-04-27T01:50:16.832898+00:00"
    />
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responded via Instagram Direct Message\` event 1`] = `
<div
  className="component isVirtualized last"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          key="private-reply-event"
          src="test-file-stub"
        />
      </div>
      <span
        className="actionName"
      >
        Responded via Instagram Direct Message
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        className=""
        name="Alex Plugaru"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2021-04-27T01:50:16.832898+00:00"
    />
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responding to a Facebook comment\` event 1`] = `
<div
  className="component isVirtualized last"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          key="private-reply-event"
          src="test-file-stub"
        />
      </div>
      <span
        className="actionName"
      >
        Responding to a Facebook comment
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        className=""
        name="Alex Plugaru"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2021-04-27T01:50:16.832898+00:00"
    />
  </div>
  <div
    className="eventDetails"
  >
    <TicketMessageEmbeddedCard
      integrationId={8}
      messageCreatedDatetime="2021-04-27T01:45:26+00:00"
      messageId="1537287279812902_1664359293772366"
      messageText="Nice post!"
      meta={Object {}}
      sender={
        Object {
          "email": null,
          "firstname": "Mehdi",
          "id": 6,
          "lastname": "LA J",
          "meta": Object {
            "name_set_via": "facebook",
          },
          "name": "Mehdi D LA J",
        }
      }
      source={
        Object {
          "extra": Object {
            "page_id": "657788504429455",
            "parent_id": "657788504429455_1537287279812902",
            "post_id": "657788504429455_1537287279812902",
          },
          "from": Object {
            "address": "657788504429455-3609805465727160",
            "name": "Mehdi D LA J",
          },
          "to": Array [
            Object {
              "address": "657788504429455-657788504429455",
              "name": "L'acteur",
            },
          ],
          "type": "facebook-comment",
        }
      }
      textBelowAvatar={false}
    />
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responding to a Facebook comment\` event even if the payload is missing source, sender and meta data 1`] = `
<div
  className="component isVirtualized last"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          key="private-reply-event"
          src="test-file-stub"
        />
      </div>
      <span
        className="actionName"
      >
        Responding to a Facebook comment
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        className=""
        name="Alex Plugaru"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2021-04-27T01:50:16.832898+00:00"
    />
  </div>
  <div
    className="eventDetails"
  >
    <TicketMessageEmbeddedCard
      integrationId={8}
      messageText="Nice post!"
      meta={Object {}}
      sender={Object {}}
      source={Object {}}
      textBelowAvatar={false}
    />
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responding to an Instagram comment\` event 1`] = `
<div
  className="component isVirtualized last"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          key="private-reply-event"
          src="test-file-stub"
        />
      </div>
      <span
        className="actionName"
      >
        Responding to an Instagram comment
      </span>
      <span
        className="filler"
      >
        by
      </span>
      <AgentLabel
        className=""
        name="Alex Plugaru"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2021-04-27T01:50:16.832898+00:00"
    />
  </div>
  <div
    className="eventDetails"
  >
    <TicketMessageEmbeddedCard
      integrationId={8}
      messageCreatedDatetime="2021-04-27T01:45:26+00:00"
      messageId="1537287279812902_1664359293772366"
      meta={Object {}}
      sender={
        Object {
          "email": null,
          "firstname": "Mehdi",
          "id": 6,
          "lastname": "LA J",
          "meta": Object {
            "name_set_via": "facebook",
          },
          "name": "Mehdi D LA J",
        }
      }
      source={
        Object {
          "extra": Object {
            "page_id": "657788504429455",
            "parent_id": "657788504429455_1537287279812902",
            "post_id": "657788504429455_1537287279812902",
          },
          "from": Object {
            "address": "657788504429455-3609805465727160",
            "name": "Mehdi D LA J",
          },
          "to": Array [
            Object {
              "address": "657788504429455-657788504429455",
              "name": "L'acteur",
            },
          ],
          "type": "facebook-comment",
        }
      }
      textBelowAvatar={false}
    />
  </div>
</div>
`;
